{
    "name": "InputMap",
    "maps": [
        {
            "name": "IslandMovement",
            "id": "a3485b76-02d1-4912-a7ae-9fa6f6718dbc",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "dd8f64d8-2ef6-4484-89de-370d25b339a2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "409317ee-03c5-4533-b846-04f5540c7792",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "82031b06-33a1-4718-a7c1-cb580b49b5a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "2edae479-657a-4226-b848-0985f5a2c9ba",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "cfdbdf19-a2fb-4fd7-b229-948ef62c85f6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3ab61582-08db-4072-ba20-6a0b86da282b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8b350749-1d4a-4bbb-8c16-bed0a6effd45",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "62138d13-cc71-496d-a46c-5cd13931001d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2db9b2c6-69cf-4f28-8a04-3f85598cd8da",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64b6f935-8c01-44dd-af98-abe88df0b6d7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c269eb82-3ddb-4b97-8025-4faf3559dca1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "VoidMovement",
            "id": "c6bddfed-10a3-4174-a8b4-900b9a2e3e63",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f507142c-1f94-4030-b450-7226876ba1bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "41082b68-9b38-430f-b41f-e27bbe680c63",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "426e47e4-54e2-4789-aed3-cc1e794ed6e0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuMap",
            "id": "ad9026bd-6900-4ddd-b3a1-3f7277221542",
            "actions": [
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "9c74d5f1-7748-4873-9eac-36169920bb02",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "1c0255cb-1fb9-4e29-9241-6ec915e295c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "12916b19-5333-47ac-933a-35a31e56a5e9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3bc9f045-4b86-48d2-90b4-55b323916ea1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ef24a74e-849a-434a-a76c-359636955404",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1135349a-58fd-481e-a0bc-57de938af09d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4617bae7-cadd-493f-80f1-0165a423cb82",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}